[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medical-triage-env"
version = "1.0.0"
description = "Emergency department patient triage simulation for AI agents"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.5.0",
    "fastapi==0.104.0",
    "uvicorn==0.24.0",
    "openai==1.54.0",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
